--- a/sw-mq/pom.xml
+++ b/sw-mq/pom.xml
@@ -18,11 +18,11 @@
 
     <dependencies>
         <!--kafka-->
-        <dependency>
+       <!-- <dependency>
             <groupId>com.sankuai.xm</groupId>
             <artifactId>xm-kafka</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
 
         <!-- javax -->
         <dependency>
